--- a/tutorials/tutorial-manifest.json
+++ b/tutorials/tutorial-manifest.json
@@ -3,9 +3,9 @@
     "docs_only": 0,
     "index_only": 0,
     "mixed": 0,
-    "root_only": 157
+    "root_only": 159
   },
-  "tutorial_count": 157,
+  "tutorial_count": 159,
   "tutorials": [
     {
       "chapter_numbers": [
@@ -327,6 +327,25 @@
       "has_index": true,
       "name": "awesome-mcp-servers-tutorial",
       "path": "tutorials/awesome-mcp-servers-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "awslabs-mcp-tutorial",
+      "path": "tutorials/awslabs-mcp-tutorial",
       "structure": "root_only",
       "top_level_chapter_count": 8,
       "total_numbered_chapter_count": 8
@@ -1201,6 +1220,25 @@
       "has_index": true,
       "name": "gemini-cli-tutorial",
       "path": "tutorials/gemini-cli-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "genai-toolbox-tutorial",
+      "path": "tutorials/genai-toolbox-tutorial",
       "structure": "root_only",
       "top_level_chapter_count": 8,
       "total_numbered_chapter_count": 8
