docs: add mcp inspector and mcp registry tutorial packs

--- a/tutorials/tutorial-manifest.json
+++ b/tutorials/tutorial-manifest.json
@@ -3,9 +3,9 @@
     "docs_only": 0,
     "index_only": 0,
     "mixed": 0,
-    "root_only": 159
+    "root_only": 161
   },
-  "tutorial_count": 159,
+  "tutorial_count": 161,
   "tutorials": [
     {
       "chapter_numbers": [
@@ -1808,8 +1808,46 @@
       ],
       "docs_chapter_count": 0,
       "has_index": true,
+      "name": "mcp-inspector-tutorial",
+      "path": "tutorials/mcp-inspector-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
       "name": "mcp-python-sdk-tutorial",
       "path": "tutorials/mcp-python-sdk-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "mcp-registry-tutorial",
+      "path": "tutorials/mcp-registry-tutorial",
       "structure": "root_only",
       "top_level_chapter_count": 8,
       "total_numbered_chapter_count": 8
