--- a/tutorials/tutorial-manifest.json
+++ b/tutorials/tutorial-manifest.json
@@ -3,9 +3,9 @@
     "docs_only": 0,
     "index_only": 0,
     "mixed": 0,
-    "root_only": 163
+    "root_only": 165
   },
-  "tutorial_count": 163,
+  "tutorial_count": 165,
   "tutorials": [
     {
       "chapter_numbers": [
@@ -1808,6 +1808,25 @@
       ],
       "docs_chapter_count": 0,
       "has_index": true,
+      "name": "mcp-go-sdk-tutorial",
+      "path": "tutorials/mcp-go-sdk-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
       "name": "mcp-inspector-tutorial",
       "path": "tutorials/mcp-inspector-tutorial",
       "structure": "root_only",
@@ -1867,6 +1886,25 @@
       "has_index": true,
       "name": "mcp-servers-tutorial",
       "path": "tutorials/mcp-servers-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "mcp-specification-tutorial",
+      "path": "tutorials/mcp-specification-tutorial",
       "structure": "root_only",
       "top_level_chapter_count": 8,
       "total_numbered_chapter_count": 8
