docs: add quickstart-resources and create-python-server tracks

--- a/tutorials/tutorial-manifest.json
+++ b/tutorials/tutorial-manifest.json
@@ -3,9 +3,9 @@
     "docs_only": 0,
     "index_only": 0,
     "mixed": 0,
-    "root_only": 175
+    "root_only": 177
   },
-  "tutorial_count": 175,
+  "tutorial_count": 177,
   "tutorials": [
     {
       "chapter_numbers": [
@@ -916,6 +916,25 @@
       "has_index": true,
       "name": "copilotkit-tutorial",
       "path": "tutorials/copilotkit-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "create-python-server-tutorial",
+      "path": "tutorials/create-python-server-tutorial",
       "structure": "root_only",
       "top_level_chapter_count": 8,
       "total_numbered_chapter_count": 8
@@ -1943,6 +1962,25 @@
       "has_index": true,
       "name": "mcp-python-sdk-tutorial",
       "path": "tutorials/mcp-python-sdk-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "mcp-quickstart-resources-tutorial",
+      "path": "tutorials/mcp-quickstart-resources-tutorial",
       "structure": "root_only",
       "top_level_chapter_count": 8,
       "total_numbered_chapter_count": 8
