--- a/tutorials/tutorial-manifest.json
+++ b/tutorials/tutorial-manifest.json
@@ -3,9 +3,9 @@
     "docs_only": 0,
     "index_only": 0,
     "mixed": 0,
-    "root_only": 181
+    "root_only": 183
   },
-  "tutorial_count": 181,
+  "tutorial_count": 183,
   "tutorials": [
     {
       "chapter_numbers": [
@@ -3120,6 +3120,25 @@
       ],
       "docs_chapter_count": 0,
       "has_index": true,
+      "name": "stagewise-tutorial",
+      "path": "tutorials/stagewise-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
       "name": "strands-agents-tutorial",
       "path": "tutorials/strands-agents-tutorial",
       "structure": "root_only",
@@ -3217,6 +3236,25 @@
       "has_index": true,
       "name": "swe-agent-tutorial",
       "path": "tutorials/swe-agent-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "sweep-tutorial",
+      "path": "tutorials/sweep-tutorial",
       "structure": "root_only",
       "top_level_chapter_count": 8,
       "total_numbered_chapter_count": 8
